@@ -219,3 +219,4 @@
 20031001 ChangeLog, README, man/fuse.1: port 0.6.1.1 changes to HEAD.
 20031003 configure.in: bump version number to 0.6.1.1 (missed when porting
 	 the 0.6.1.1 changes to HEAD).
+20031004 timer.c: remove duplicated Win32 code (Marek)
